--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-Flask
-gunicorn
+click==8.1.3
+colorama==0.4.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsons==1.6.3
+MarkupSafe==2.1.2
+typish==1.9.3
+Werkzeug==2.2.2
+gunicorn==20.1.0
